--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,6 +1,6 @@
 [general]
 # > 网络检查
-network_check_url=http://bing.com/
+network_check_url=http://www.apple.com
 
 # > 服务器检查
 server_check_url=http://cp.cloudflare.com/generate_204
@@ -8,21 +8,21 @@ server_check_url=http://cp.cloudflare.com/generate_204
 # > 服务器检查超时
 server_check_timeout=3000
 
+# > 运行模式触发
+running_mode_trigger=filter, filter, Matrix3:all_proxy, Matrix5:all_direct
+
+# > 排除路线
+excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
+
 # > 配置文件图标
 profile_img_url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Matrix/A-008.JPG
-
-# > 运行模式触发
-# running_mode_trigger=filter, filter, Wi-Fi-1:all_proxy, Wi-Fi-2:all_direct
-
-# > 地理位置检查
-# > geo_location_checker=disabled
-geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-location-with-script.js
 
 # > 资源解析器
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
-# > 排除路线
-excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
+# > 地理位置检查(二选一)
+# geo_location_checker=disabled
+geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Script/IP-location.Js
 
 # > DNS排除列表
 dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
@@ -47,14 +47,14 @@ server=119.29.29.29
 server=114.114.114.114
 
 # > 自定义 DoH 服务器
-# doh-server=https://223.5.5.5/dns-query, https://doh.pub/dns-query
+# doh-server=https://dns.alidns.com/dns-query, https://doh.pub/dns-query
 
 # > 自定义 DoQ 服务器
 # doq-server=quic://162.14.132.109:853, quic://south.tex0n.net:785
 
 [policy]
 # > 苹果服务
-static=苹果服务, direct, proxy, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+static=苹果服务, direct, proxy, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple_2.png
 
 # > OpenAI
 static=Open-AI, proxy, direct, 自选节点, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Color/OpenAI-1.png
