--- a/QuantumultX/Matrix5.conf
+++ b/QuantumultX/Matrix5.conf
@@ -1,25 +1,39 @@
 [general]
 # > 网络检查
-network_check_url=http://bing.com/
+network_check_url=http://www.apple.com
 
 # > 服务器检查
 server_check_url=http://cp.cloudflare.com/generate_204
+
+# > DoH用户代理
+# doh_user_agent=Agent/1.0
+
+# > 服务器检查用户代理
+# server_check_user_agent=Agent/1.0
 
 # > 服务器检查超时
 server_check_timeout=3000
 
 # > 配置文件图标
-profile_img_url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Matrix/A-008.JPG
+profile_img_url=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Matrix-icon/Matrix/B-007.PNG
+
+# > SSID暂停列表
+# ssid_suspended_list=Wi-Fi-3, Wi-Fi-4
 
 # > 运行模式触发
 # running_mode_trigger=filter, filter, Wi-Fi-1:all_proxy, Wi-Fi-2:all_direct
 
 # > 地理位置检查
-# > geo_location_checker=disabled
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/crossutility/Quantumult-X/master/sample-location-with-script.js
 
 # > 资源解析器
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+
+# > ICMP自动回复
+# icmp_auto_reply=true
+
+# > DNS拒绝域行为
+# dns_reject_domain_behavior=loopback
 
 # > 排除路线
 excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
@@ -27,11 +41,14 @@ excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.
 # > DNS排除列表
 dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
 
-# > UDP白名单
-udp_whitelist=1-442, 444-65535
+# > UPD白名单
+# udp_whitelist=53,123,1900,80-443
 
 # > UPD丢弃列表
-udp_drop_list=443
+# udp_drop_list=1900,80
+
+# > 回退UPD策略
+# fallback_udp_policy=direct
 
 [dns]
 # > 禁用系统DNS/IPv6
@@ -39,58 +56,76 @@ no-system
 no-ipv6
 
 # > DNS over HTTP/3
-# prefer-doh3
+prefer-doh3
 
 # > 自定义 DNS 服务器
+# server=8.8.8.8
 server=223.5.5.5
+server=223.6.6.6
+server=202.141.176.93 
+server=202.141.178.13
+server=117.50.10.10
+server=117.50.11.11
 server=119.29.29.29
+server=119.28.28.28
+server=180.76.76.76
 server=114.114.114.114
+server=114.114.115.115
 
 # > 自定义 DoH 服务器
-# doh-server=https://223.5.5.5/dns-query, https://doh.pub/dns-query
+doh-server=https://223.5.5.5/dns-query, https://doh.pub/dns-query
 
 # > 自定义 DoQ 服务器
-# doq-server=quic://162.14.132.109:853, quic://south.tex0n.net:785
+doq-server=quic://162.14.132.109:853, quic://south.tex0n.net:785
 
 [policy]
 # > 苹果服务
-static=苹果服务, direct, proxy, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+static=苹果服务, direct, proxy, 自动选择, 健康监测, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+
+# > 网易音乐
+static=网易音乐, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
+
+# > 速度测试
+static=速度测试, proxy, direct, 自动选择, 健康监测, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Available.png
 
 # > 港台番剧
-static=港台番剧, direct, proxy, 自动选择, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
+static=港台番剧, direct, proxy, 自动选择, 健康监测, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
 
-# > 国内影视
-static=国内影视, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingCN.png
+# > 国内媒体
+static=国内媒体, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingCN.png
 
 # > 国际媒体
-static=国际媒体, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
+static=国际媒体, proxy, direct, 自动选择, 健康监测, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Streaming.png
 
 # > 全球加速
-static=全球加速, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
+static=全球加速, proxy, direct, 自动选择, 健康监测, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 
 # > 黑白名单
-static=黑白名单, proxy, direct, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+static=黑白名单, proxy, direct, 自动选择, 健康监测, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 # > 自动选择
-url-latency-benchmark=自动选择, server-tag-regex=^(.(?!(〃◉′ω`◉〃)))*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
+url-latency-benchmark=自动选择, server-tag-regex=^(.(?!(〃◉′ω`◉〃)))*$, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
+
+# > 健康监测
+available=健康监测, server-tag-regex=^(.(?!(〃◉′ω`◉〃)))*$, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/CN.png
 
 # > 香港节点
-url-latency-benchmark=香港节点, server-tag-regex=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+url-latency-benchmark=香港节点, server-tag-regex=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 
 # > 台湾节点
-url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台湾|台|TW|(?i)Taiwan))^((?!(香港|日本|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+url-latency-benchmark=台湾节点, server-tag-regex=(?=.*(台湾|台|TW|(?i)Taiwan))^((?!(香港|日本|韩国|新加坡|美国)).)*$, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
 
 # > 日本节点
-url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|日|JP|(?i)Japan))^((?!(香港|台湾|韩国|新加坡|美国)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+url-latency-benchmark=日本节点, server-tag-regex=(?=.*(日本|日|JP|(?i)Japan))^((?!(香港|台湾|韩国|新加坡|美国)).)*$, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
 
 # > 韩国节点
-url-latency-benchmark=韩国节点, server-tag-regex=(?=.*(韩国|韩|KR|(?i)SouthKorea))^((?!(香港|台湾|日本|新加坡|美国)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+url-latency-benchmark=韩国节点, server-tag-regex=(?=.*(韩国|韩|KR|(?i)SouthKorea))^((?!(香港|台湾|日本|新加坡|美国)).)*$, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
 
 # > 狮城节点
-url-latency-benchmark=狮城节点, server-tag-regex=(?=.*(新加坡|狮|SG|(?i)Singapore))^((?!(香港|台湾|日本|韩国|美国)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+url-latency-benchmark=狮城节点, server-tag-regex=(?=.*(新加坡|狮|SG|(?i)Singapore))^((?!(香港|台湾|日本|韩国|美国)).)*$, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 
 # > 美国节点
-url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$, check-interval=1800, tolerance=50, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$, check-interval=600, tolerance=0, alive-checking=false, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 
 [server_local]
 # > 本地服务器
@@ -99,42 +134,86 @@ url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美国|美|US|(?i)Uni
 # > 远程服务器
 
 [filter_local]
+# > 局域网络
+HOST-SUFFIX, local, DIRECT
+IP-CIDR, 10.0.0.0/8, DIRECT
+IP-CIDR, 127.0.0.0/8, DIRECT
+IP-CIDR, 172.16.0.0/12, DIRECT
+IP-CIDR, 192.168.0.0/16, DIRECT
+IP-CIDR, 224.0.0.0/24, DIRECT
+IP-CIDR, 17.0.0.0/8, DIRECT
+IP-CIDR, 182.254.116.0/24, DIRECT
+IP-CIDR, 100.64.0.0/10, DIRECT
+IP-CIDR, 203.107.1.1/24, DIRECT
+IP-CIDR, 183.240.197.130/32, DIRECT
+
 # > 最终规则
+GEOIP, CN, DIRECT
 FINAL, 黑白名单
 
 [filter_remote]
 # > 规则修正
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Direct/Direct.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Direct/Direct.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
 # > 广告拦截
-https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge2.txt, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, inserted-resource=true, enabled=true
 
-# > 微信规则
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
+# > 隐私保护
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Privacy/Privacy.list, tag=隐私保护, force-policy=reject, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
+
+# > 运营劫持
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Hijacking/Hijacking.list, tag=运营劫持, force-policy=reject, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
+
+# > 微信直连
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信直连, force-policy=direct, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
+
+# > 网易音乐
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/NetEaseMusic/NetEaseMusic.list, tag=网易音乐, force-policy=网易音乐, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
+
+# > 速度测试
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Speedtest/Speedtest.list, tag=速度测试, force-policy=速度测试, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
+
+# > 推特规则
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Twitter/Twitter.list, tag=推特规则, force-policy=全球加速, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
+
+# > 电报规则
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Telegram/Telegram.list, tag=电报规则, force-policy=全球加速, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
+
+# > 脸书规则
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Facebook/Facebook.list, tag=脸书规则, force-policy=全球加速, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
 # > 国际抖音
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/TikTok/TikTok.list, tag=国际抖音, force-policy=国际媒体, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/TikTok/TikTok.list, tag=国际抖音, force-policy=国际媒体, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
 # > 国际媒体
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/GlobalMedia/GlobalMedia.list, tag=国际媒体, force-policy=国际媒体, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/GlobalMedia/GlobalMedia.list, tag=国际媒体, force-policy=国际媒体, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
 # > 哔哩哔哩
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/BiliBili/BiliBili.list, tag=哔哩哔哩, force-policy=港台番剧, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/BiliBili/BiliBili.list, tag=哔哩哔哩, force-policy=港台番剧, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
-# > 国内影视
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/ChinaMedia/ChinaMedia.list, tag=国内影视, force-policy=国内影视, update-interval=172800, opt-parser=false, enabled=true
+# > 港台番剧
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingSE.list, tag=港台番剧, force-policy=港台番剧, update-interval=172800, opt-parser=true, enabled=true
+
+# > 国内抖音
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/DouYin/DouYin.list, tag=国内抖音, force-policy=国内媒体, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
+
+# > 国内媒体
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/ChinaMedia/ChinaMedia.list, tag=国内媒体, force-policy=国内媒体, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
 # > 苹果服务
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
-# > 全球加速
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=全球加速, force-policy=全球加速, update-interval=172800, opt-parser=false, enabled=true
+# > 谷歌服务
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Google/Google.list, tag=谷歌服务, force-policy=全球加速, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
-# > LAN
-FILTER_LAN, tag=局部域网, force-policy=direct, enabled=true
+# > 微软服务
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Microsoft/Microsoft.list, tag=微软服务, force-policy=全球加速, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
-# > GEOIPCN
-FILTER_REGION, tag=国内规则, force-policy=direct, enabled=true
+# > 国际网络
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, tag=国际网络, force-policy=全球加速, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
+
+# > 国内网络
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/ChinaASN/ChinaASN.list, tag=国内网络, force-policy=direct, update-interval=172800, opt-parser=false, inserted-resource=true, enabled=true
 
 [rewrite_local]
 # > Sub-Store
@@ -148,14 +227,32 @@ FILTER_REGION, tag=国内规则, force-policy=direct, enabled=true
 # > 抖音免拔卡
 https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/TikTok-TW.conf, tag=抖音免拔卡, update-interval=172800, opt-parser=false, enabled=true
 
+# > 伟人会员集
+https://raw.githubusercontent.com/WeiRen0/Free1/main/Lsp.conf, tag=伟人会员集, update-interval=172800, opt-parser=false, enabled=true
+
+# > 墨鱼会员集
+https://gist.githubusercontent.com/ddgksf/35a94372ae4271562f0139d8a80a94e5/raw/ForOwnUse.snippet, tag=墨鱼会员集, update-interval=172800, opt-parser=false, enabled=true
+
 # > 哔站去广告
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf, tag=哔站去广告, update-interval=172800, opt-parser=false, enabled=true
+
+# > 微信去广告
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Applet.conf, tag=微信去广告, update-interval=172800, opt-parser=false, enabled=true
+
+# > 微博去广告
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf, tag=微博去广告, update-interval=172800, opt-parser=false, enabled=true
 
 # > 油管去广告
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf, tag=油管去广告, update-interval=172800, opt-parser=false, enabled=true
 
-# > 微博去广告
-https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf, tag=微博去广告, update-interval=172800, opt-parser=false, enabled=true
+# > 菜鸟去广告
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Cainiao.conf, tag=菜鸟去广告, update-interval=172800, opt-parser=true, enabled=true
+
+# > 影视网优化
+https://github.com/ddgksf2013/Rewrite/raw/master/Html/WebAdBlock.conf, tag=影视网优化, update-interval=172800, opt-parser=false, enabled=true
+
+# > 高德去广告
+https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Amap.conf, tag=高德去广告, update-interval=172800, opt-parser=false, enabled=true
 
 # > 知乎去广告
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zheye/zheye.snippet, tag=知乎去广告, update-interval=172800, opt-parser=false, enabled=true
@@ -169,6 +266,9 @@ https://raw.githubusercontent.com/fmz200/wool_scripts/main/QuantumultX/rewrite/c
 # > 爬虫去广告
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Advertising/Advertising.conf, tag=爬虫去广告, update-interval=172800, opt-parser=false, enabled=true
 
+# > 爬虫重定向
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Redirect/Redirect.conf, tag=爬虫重定向, update-interval=172800, opt-parser=false, enabled=true
+
 # > BoxJs商店
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs商店, update-interval=172800, opt-parser=false, enabled=true
 
@@ -179,30 +279,42 @@ event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/
 # > 策略流量查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/traffic-check.js, tag=策略流量查询, img-url=arrow.up.arrow.down.circle.system, enabled=true
 
+# > 地理位置查询
+event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/geo_location.js, tag=地理位置查询, img-url=location.circle.system, enabled=true
+
 # > 节点信息查询
 event-interaction https://api.343.re/freedom/rule/quanx/script/ipinfo.js, tag=节点信息查询, img-url=star.circle.system, enabled=true
 
 # > 谷歌送中查询
 event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/switch-check-google.js, tag=谷歌送中查询, img-url=drop.circle.system, enabled=true
 
+# > 网易音乐查询
+event-interaction https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/TaskLocal/NeteaseMusicUnlockCheck.js, tag=网易音乐查询, img-url=lock.circle.system, enabled=true
+
 # > 代理链路检测
 event-interaction https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/NodeLinkCheck/Script/NodeLinkCheck.js, tag=代理链路检测, img-url=link.circle.system, enabled=true
 
 [http_backend]
-# > BoxJs使用HTTP_backend设置的详细教程链接
+# > BoxJs改使用HTTP_backend设置详细教程链接
 # > https://chavyleung.gitbook.io/boxjs/
 https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, host=boxjs.com, tag=BoxJS, path=^/, enabled=false
 
 [mitm]
 # > 生成证书会在生成对应信息PASSPHRASE和P12
-# passphrase = 
-# p12 = 
+passphrase = 
+p12 = 
+
+# > 作为局域网网关时 跳过某些特定设备MITM需求
+# skip_src_ip=192.168.4.50, 92.168.4.51
+
+# > 跳过其中某些连接的MITM HOSTNAMA匹配过程
+# skip_dst_ip=123.44.55.4
 
 # > 跳过验证证书
-skip_validating_cert=false
+skip_validating_cert = false
 
 # > 强制SNI域名
-force_sni_domain_name=false
+force_sni_domain_name = false
 
 # > HOSTNAME是主机名多个主机名用英文逗号分隔
-hostname=-consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com, sub.store, testflight.apple.com
+hostname = -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com, sub.store, testflight.apple.com
