--- a/Loon/Matrix5.conf
+++ b/Loon/Matrix5.conf
@@ -1,7 +1,3 @@
-# > Loon 配置
-
-# > 2023-03-28 14:55
-
 [General]
 # > 接口模式
 interface-mode = auto
@@ -9,14 +5,17 @@ interface-mode = auto
 # > 跳过代理
 skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,e.crashlynatics.com,www.baidu.com,yunbusiness.ccb.com
 
-# > IPv6支持(默认开启)
+# > IPv6支持
 ipv6 = true
 
 # > 旁路隧道
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 
+# > 数据库
+geoip-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+
 # > DNS服务器
-dns-server = system,119.29.29.29,114.114.114.114,223.5.5.5
+dns-server = 119.29.29.29,114.114.114.114,223.5.5.5
  
 # > 是否允许wifi下共享网络
 allow-wifi-access = false
@@ -122,17 +121,11 @@ FINAL,黑白名单
 # > 远程规则:规则修正
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Direct/Direct.list, policy=DIRECT, tag=规则修正, enabled=true
 
-# > 远程规则:广告拦截
-https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge2.txt, policy=REJECT, tag=广告拦截, enabled=true
-
-# > 远程规则:隐私保护
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy_Domain.list, policy=REJECT, tag=隐私保护, enabled=true
-
-# > 远程规则:运营劫持
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Hijacking/Hijacking.list, policy=REJECT, tag=运营劫持, enabled=true
-
 # > 远程规则:微信直连
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true
+
+# > 远程规则:国际抖音
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TikTok/TikTok.list, policy=国际媒体, tag=国际抖音, enabled=true
 
 # > 远程规则:国际媒体
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=国际媒体, tag=国际媒体, enabled=true
@@ -142,6 +135,9 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 
 # > 远程规则:哔哩哔哩
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/BiliBili/BiliBili.list, policy=港台番剧, tag=哔哩哔哩, enabled=true
+
+# > 远程规则:国内抖音
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/DouYin/DouYin.list, policy=国内媒体, tag=国内抖音, enabled=true
 
 # > 远程规则:国内媒体
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaMedia/ChinaMedia.list, policy=国内媒体, tag=国内媒体, enabled=true
@@ -158,23 +154,25 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 # > 远程规则:全球加速
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Global/Global_Domain.list, policy=全球加速, tag=全球加速, enabled=true
 
-# > 远程规则:国内网站
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaASN/ChinaASN.list, policy=DIRECT, tag=国内网站, enabled=true
-
 [Rewrite]
+# > 重写
 
 [Host]
+# > HOST
 
 [Script]
+# > 脚本
 
 [Remote Script]
+# > 远程脚本
 
 [Plugin]
+# > 插件
 
 [MITM]
 # > 生成证书会在生成CA-PASSPHRASE与CA-P12信息
-#ca-p12 =
-#ca-passphrase =
+ca-p12 =
+ca-passphrase =
 
 # > 主机名
 hostname = *.example.com,*.sample.com
