--- a/Loon/Matrix3.conf
+++ b/Loon/Matrix3.conf
@@ -1,7 +1,3 @@
-# > Loon 配置
-
-# > 2023-03-28 15:00
-
 [General]
 # > 接口模式
 interface-mode = auto
@@ -9,20 +5,23 @@ interface-mode = auto
 # > 跳过代理
 skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,e.crashlynatics.com,www.baidu.com,yunbusiness.ccb.com
 
-# > IPv6支持(默认开启)
+# > IPv6支持
 ipv6 = true
 
 # > 旁路隧道
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 
 # > DNS服务器
-dns-server = system,119.29.29.29,114.114.114.114,223.5.5.5
+dns-server = 119.29.29.29,114.114.114.114,223.5.5.5
 
 # > DoH服务器
-# doh-server = 
+doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
 
 # > DoQ服务器
-# doq-server = 
+doq-server = quic://162.14.132.109:853, quic://south.tex0n.net:785 
+
+# > 数据库
+geoip-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
 # > DoH3服务器
 # doh3-server =
@@ -61,10 +60,6 @@ switch-node-after-failure-times = 3
 # > 订阅节点
 
 [Remote Filter]
-# > NodeSelect    使用在UI上选择的节点
-# > NameKeyword   根据提供的关键词筛选
-# > NameRegex     根据提供的正则式筛选
-
 # > 全部节点
 全部 = NameRegex, FilterKey = "^"
 
@@ -87,12 +82,6 @@ switch-node-after-failure-times = 3
 美国 = NameRegex, FilterKey = "(?i)(美国|美|US|United States)"
 
 [Proxy Group]
-# > SELECT策略组使用策略取决于UI选择
-# > SSID策略组使用策略取决于SSID名字
-# > URL-TEST策略组选择最优代理服务器
-# > FALLBACK策略组选择第一个可用节点
-# > LOAD-BALANCE策略组均衡负载选择子策略
-
 # > 自行选择
 自行选择 = select,全部,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 
@@ -250,18 +239,10 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 # > 重写
 
 [Host]
-# > 可以指定以下四种模式：
-# > 1、指定域名使用对应的IP地址
-# > 2、将域名指向另一个域名
-# > 3、指定域名请求DNS时使用特定的DNS服务器
-# > 4、指定具体的SSID环境下使用特定的DNS服务器
+# > HOST
 
 [Script]
-# > http-request     处理请求的脚本
-# > http-response    处理请求响应的脚本
-# > cron             定时脚本
-# > network-changed  网络发生变化触发脚本
-# > generic          通用型脚本可用在操作节点/策略组中，执行是会带入节点名称和策略组名称，脚本必须在开启NE时
+# > 脚本
 
 [Remote Script]
 # > 远程脚本
@@ -271,8 +252,8 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 
 [MITM]
 # > 生成证书会在生成CA-PASSPHRASE与CA-P12信息
-#ca-p12 =
-#ca-passphrase =
+ca-p12 =
+ca-passphrase =
 
 # > 主机名
 hostname = *.example.com,*.sample.com
