--- a/Stash/Matrix5.yaml
+++ b/Stash/Matrix5.yaml
@@ -1,14 +1,10 @@
-# > Stash 配置
-
-# > 2023.02.22 15:45
-
 # > 订阅的信息展示
-subscribe-url: http://your-service-provider
+subscribe-url: 🔴订阅链接🟢
 
 # > 远程服务器
 proxy-providers:
   服务提供商-1:
-    url: http://your-service-provider
+    url: 🔴订阅链接🟢
     interval: 600
 
 proxy-groups:
@@ -24,21 +20,6 @@ proxy-groups:
 # > 策略组:苹果服务
   - name: 苹果服务
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-    type: select
-    proxies: &proxies
-      - DIRECT
-      - 自行选择
-      - 自动选择
-      - 香港节点
-      - 台湾节点
-      - 日本节点
-      - 韩国节点
-      - 狮城节点
-      - 美国节点
-
-# > 策略组:速度测试
-  - name: 速度测试
-    icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/Speedtest.png
     type: select
     proxies: &proxies
       - DIRECT
@@ -209,14 +190,17 @@ rules:
 # > 本地规则:微信直连
   - RULE-SET, 微信直连, DIRECT
 
-# > 本地规则:速度测试
-  - RULE-SET, 速度测试, 速度测试
+# > 本地规则:国际抖音
+  - RULE-SET, 国际抖音, 国际媒体
 
 # > 本地规则:国际媒体
   - RULE-SET, 国际媒体, 国际媒体
 
 # > 本地规则:哔哩哔哩
   - RULE-SET, 哔哩哔哩, 港台番剧
+
+# > 本地规则:国内抖音
+  - RULE-SET, 国内抖音, 国内媒体
 
 # > 本地规则:国内媒体
   - RULE-SET, 国内媒体, 国内媒体
@@ -244,11 +228,11 @@ rule-providers:
     interval: 86400
     url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.yaml
 
-# > 远程规则:速度测试
-  速度测试:
+# > 远程规则:国际抖音
+  国际抖音:
     behavior: classical
     interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.yaml
+    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.yaml
 
 # > 远程规则:国际媒体
   国际媒体:
@@ -261,6 +245,12 @@ rule-providers:
     behavior: classical
     interval: 86400
     url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
+
+# > 远程规则:国内抖音
+  国内抖音:
+    behavior: classical
+    interval: 86400
+    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouYin/DouYin.yaml
 
 # > 远程规则:国内媒体
   国内媒体:
@@ -289,12 +279,8 @@ script:
 dns:
   default-nameserver:
     - 114.114.114.114
-    - 114.114.115.115
-    - 119.28.28.28
     - 119.29.29.29
     - 223.5.5.5
-    - 223.6.6.6
-    - system
   nameserver:
     - https://dns.alidns.com/dns-query
     - https://doh.pub/dns-query
